Fix PrintScreen key on Linux.

Despite the name, Linux/X11 systems map the PrintScreen
key to XK_Print rather than XK_KEY_3270_PrintScreen.
We map both to DOM 'PrintScreen' to match user expectations, and
the behaviour of other browsers, and Chrome on other platforms.

BUG=683097

Change-Id: If2d4f78ef191d51544f0eee64098a7348e60fa37
Reviewed-on: https://chromium-review.googlesource.com/921921
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537512}
Former-commit-id: 7ab3497a39e00cc08b3f0901f272160ea3b2a46d